--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.20"
+  },
+  "devDependencies": {
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0"
   }
 }
