--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.20"
+    "lodash-es": "^4.17.15"
   },
   "devDependencies": {
     "webpack": "^5.1.3",
