--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.12"
   },
   "devDependencies": {
+    "css-loader": "^5.0.0",
     "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.1.3",
